<resources>
    <string name="app_name">Hitung BMI</string>
    <string name="top_text">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="berat_label">Berat badan(kg)</string>
    <string name="tinggi_label">Tinggi badan(cm)</string>
    <string name="gender_label">Jenis kelamin</string>
    <string name="gender_pria">Pria</string>
    <string name="gender_wanita">Wanita</string>
    <string name="hitung_label">Hitung</string>
    <string name="bmi_x">BMI: %1.2f</string>
    <string name="kurus">Kurus</string>
    <string name="ideal">Ideal</string>
    <string name="gemuk">Gemuk</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="gender_x">Jenis Kelamin: %1$s</string>
    <string name="berat_invalid">Berat tidak boleh kosong!</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong!</string>
    <string name="gender_invalid">Pilih jenis kelamin.</string>
    <string name="reset">Reset</string>
    <string name="judul_kurus">Mengatasi Kekurusan</string>
    <string name="judul_ideal">Menjaga Tetap Ideal</string>
    <string name="judul_gemuk">Mengatasi Kegemukan</string>
    <string name="saran_kurus">Cobalah untuk makan porsi besar, seperti burger berukuran raksasa ini.</string>
    <string name="saran_ideal">Pertahankan gaya hidupmu! Tapi jangan kebanyakangaya karena itu berbahaya.</string>
    <string name="saran_gemuk">Cobalah untuk olahraga lari. Kemanapun boleh, asal tidak lari dari kehidupan.</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="copyright">Hitung BMI merupakan sebuah aplikasi Android untuk menghitung body mass index (BMI) sehingga seseorang dapat mengetahui apakah berat badannya ideal, gemuk atau kurus.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/indraazimi/hitung-bmi\n\nCopyright © 2021 Indra Azimi.\nAll rights reserved.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">%s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="berat_x">BB: %1$.1f</string>
    <string name="tinggi_x">TB: %1$.1f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

</resources>