<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/horizontal_margin"
    android:weightSum="2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@null"
        tools:src="@drawable/ideal" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        tools:text="@string/saran_ideal" />

    <TextView
        android:id="@+id/beratBadan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:textSize="18sp"
        android:text="@string/berat_label"/>

    <TextView
        android:id="@+id/tinggiBadan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:textSize="18sp"
        android:text="@string/tinggi_label"/>

    <TextView
        android:id="@+id/jenisKelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:textSize="18sp"
        android:text="@string/gender_label"/>

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/bagikan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jenisKelamin" />


</LinearLayout>